--- a/Views/ProjectsOverview.cshtml
+++ b/Views/ProjectsOverview.cshtml
@@ -1,64 +1,74 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ProjectsViewModel>
-@using AarhusWebDevCoop.ViewModels;
+﻿
+
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ProjectsOverview>
+@using ContentModels = Umbraco.Web.PublishedModels;
 @{
     Layout = "Master.cshtml";
 }
 <!DOCTYPE HTML>
 <html>
-<body>
 
-    <!-- Jumbotron, w title -->
-    <div class="jumbotron text-center jumbotron-fluid">
-        <div class="container">
 
-            <p>What we do when we do what we do - and why!</p>
-        </div>
-    </div>
-
-    <div class="sidenav">
-        <ul>
-            @{
-                foreach (var item in Model.ProjectStatusList)
-                {
-                    <li class="nav-item @(item.ToLower() == Model.ProjectStatus.ToLower() ? "current" : null)">
-                        <a href="@item.ToLower()">@item</a>
-                    </li>
-                }
-            }
-        </ul>
-    </div>
-
-    <!-- Main container -->
+<!-- Jumbotron, w title -->
+<div class="jumbotron text-center jumbotron-fluid">
     <div class="container">
+        <h1 class="display-1">@Model.ProjectsTitle</h1>
+        <p>What we do when we do what we do - and why!</p>
+    </div>
+</div>asd
 
+<!-- Main container -->
+<div class="container">
 
-        <div class="row section">
-            <div class="col-md-12">
-                <h3>Projects</h3>
-
-
-
-                <section>
-                    @foreach (var item in Model.Projects)
-                    {
-                        <div class="project">
-                            <div class="projecttitle"><a href="@item.Url()">@item.Name</a></div>
-                            <div class="projectpreview">
-                                @Html.Raw(item.Value("projectDescription").ToString().Truncate(100))
-                                <a href="@item.Url()">Read More..</a>
-                            </div>
-                        </div>
-                        <hr />
-                    }
-                </section>
-
-                <!-- Scripts -->
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
-            </div>
+    <!-- Featured blogpost -->
+    <div class="row section">
+        <div class="col-md-12">
+            @Model.ProjectsBodyText
         </div>
     </div>
 
-</body>
+    <!-- Latest blog posts -->
+    <div class="row section">
+        <div class="col-md-12">
+            <h3>Projects</h3>
+
+
+            @{
+                var selection = Umbraco.Content(Guid.Parse("c2dc0d55-cc17-4cc8-a11c-ea9ed8cabaa6"))
+                .ChildrenOfType("projectItem")
+                .Where(x => x.IsVisible())
+                .OrderByDescending(x => x.CreateDate);
+            }
+            <ul>
+                @foreach (var item in selection)
+                {
+                    <article class="special">
+                        <div class="projectDate"> @item.CreateDate </div>
+                        <div>@item.Value("projectStatus") </div>
+                        <div class="ProjectTitle"><a href="@item.Url">@item.Name</a></div>
+                    </article>
+                    <br>
+                    <br>
+                }
+            </ul>
+
+
+
+
+
+
+
+        </div>
+    </div>
+
+
+</div>
+
+
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+	</body>
 </html>
