--- a/Views/MacroPartials/mainMenu.cshtml
+++ b/Views/MacroPartials/mainMenu.cshtml
@@ -35,7 +35,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 
-
                     <li class="nav-item @(Model.Content.Name == root.Name ? "active" : null)">
                         <a href="@root.Url()">@root.Name</a>
                     </li>
@@ -44,24 +43,19 @@
                     {
                         if (item.Children.Any())
                         {
-
-
                             if (item.Name == "Projects")
                             {
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@item.Name <span class="caret"></span></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
+                                       role="button" aria-haspopup="true" aria-expanded="false">@item.Name <span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-
-
+                                        
                                         @foreach (var sub in item.Children.Where(x => x.HasValue("projectStatus") && x.GetProperty("projectStatus")
                                         .Value<string>() == "Completed" && x.HasValue("umbracoNaviHide") && x.GetProperty("umbracoNaviHide").Value<bool>
                                                () == false)
                                                .OrderByDescending(x => x.CreateDate).ToArray())
                                         {
-                                            if (Umbraco.MemberHasAccess(sub.Path))
-                                            {
                                                 <li><a href="@sub.Url()">@sub.Name</a></li>
-                                            }
                                         }
 
                                         @if (Roles.IsUserInRole("guest"))
@@ -74,13 +68,10 @@
                                                         () == false)
                                                         .OrderByDescending(x => x.CreateDate).ToArray())
                                             {
-                                                if (Umbraco.MemberHasAccess(sub.Path))
-                                                {
-
                                                     <li><a href="@sub.Url()">@sub.Name</a></li>
-                                                }
                                             }
                                         }
+
                                         @if (Roles.IsUserInRole("active"))
                                         {
                                             foreach (var sub in item.Children.Where(x => x.HasValue("projectStatus") && (x.GetProperty("projectStatus").Value
@@ -92,11 +83,7 @@
                                                         () == false)
                                                         .OrderByDescending(x => x.CreateDate).ToArray())
                                             {
-                                                if (Umbraco.MemberHasAccess(sub.Path))
-                                                {
-
-                                                    <li><a href="@sub.Url()">@sub.Name</a></li>
-                                                }
+                                                <li><a href="@sub.Url()">@sub.Name</a></li>
                                             }
                                         }
 
@@ -107,14 +94,15 @@
                             else 
                             {
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@item.Name <span class="caret"></span></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
+                                       role="button" aria-haspopup="true" aria-expanded="false">@item.Name 
+                                    <span class="caret"> </span></a>
                                     <ul class="dropdown-menu">
                                         <li> <a href="@item.Url()">All @item.Name</a> </li>
                                         @foreach (var sub in item.Children.Where(x => x.IsVisible()).ToArray())
                                         {
                                             <li><a href="@sub.Url()">@sub.Name</a></li>
                                         }
-
                                     </ul>
                                 </li>
                             }
