--- a/Views/Members.cshtml
+++ b/Views/Members.cshtml
@@ -10,53 +10,62 @@
     var members = memberService.GetMembersByGroup("Active");
 }
 
-@foreach (var member in members)
-{
-    var dataMember = Umbraco.Member(member.Id);
+<div class="container">
 
+	<div class="row section">
+		<div class="col-md-12">
 
-    if (member.HasProperty("Photo"))
-    {
-        string image = member.GetValue<string>("Photo");
-
-        if (image != null)
-        {
-            ImageCropperValue imageCrop = JsonConvert.DeserializeObject<ImageCropperValue>(image);
-            string imagePath = imageCrop.Src.GetCropUrl(width: 100);
-            <img src="@imagePath" />
-            <br />
-            <br />
-        }
-    }
-    @member.Name
-    <br>
-    @member.GetValue("address")
-    <br>
-    @member.GetValue("zip")
-    @member.GetValue("city")
-    <br>
-    <p>
-        Email:
-        @{
-
-            string email = member.GetValue("email").ToString();
-            @email
-        }
-
-   <br />
-        Skills:
-        @{
-
-            if (member.GetValue("skills") != null)
+            @foreach (var member in members)
             {
-                string[] skills = member.GetValue("skills").ToString().Split(',');
-                string skillString = string.Join(", ", skills.Select(item => item)).Replace("\"", "").TrimStart('[').TrimEnd(']');
-                 @skillString
+                var dataMember = Umbraco.Member(member.Id);
+            
+            
+                if (member.HasProperty("Photo"))
+                {
+                    string image = member.GetValue<string>("Photo");
+            
+                    if (image != null)
+                    {
+                        ImageCropperValue imageCrop = JsonConvert.DeserializeObject<ImageCropperValue>(image);
+                        string imagePath = imageCrop.Src.GetCropUrl(width: 100);
+                        <img src="@imagePath" />
+                        <br />
+                        <br />
+                    }
                 }
-
-
+                @member.Name
+                <br>
+                @member.GetValue("address")
+                <br>
+                @member.GetValue("zip")
+                @member.GetValue("city")
+                <br>
+                <p>
+                    Email:
+                    @{
+            
+                        string email = member.GetValue("email").ToString();
+                        @email
+                    }
+            
+               <br />
+                    Skills:
+                    @{
+            
+                        if (member.GetValue("skills") != null)
+                        {
+                            string[] skills = member.GetValue("skills").ToString().Split(',');
+                            string skillString = string.Join(", ", skills.Select(item => item)).Replace("\"", "").TrimStart('[').TrimEnd(']');
+                             @skillString
+                            }
+            
+            
+                        }
+                </p>
+                 <br /> <br /> <br /> <br />
+            
             }
-    </p>
 
-}
-
+        </div>
+    </div>
+</div>
